# droplet_freezing_analysis_tool

./: .gitignore  README.md  environment.yml  freezing_detection.py  gui.py  gui_analysis_controller.py  gui_detection_controller.py  gui_image_controller.py  gui_inp_controller.py  gui_logging.py  gui_selection_cache.py  gui_services.py  gui_state.py  gui_tabs.py  gui_workers.py  pyproject.toml  requirements.txt  tube_detection.py
examples/: water_freezing_temperatures.txt  water_locations.pkl  yeast_freezing_temperatures.txt  yeast_locations.pkl
prototype/: detect_tubes.ipynb
scripts/: visualize_inner_circles.py
usage/: usage.org  使用说明.org
