[project]
name = "circledetection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "opencv-python-headless>=4.13.0.92",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "pyqt5>=5.15.11",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
]
